# server/controller/auth_controller.go
@@ -35,17 +35,17 @@ func NewAuthController(authService service.AuthService) AuthController {
 
 // Login 用户登录
 //
-// @Summary      用户登录
-// @Description  用户登录并获取JWT令牌
-// @Tags         认证
-// @Accept       json
-// @Produce      json
-// @Param        request  body      dto.UserLoginRequest                                    true  "登录信息"
-// @Success      200      {object}  model.SuccessResponse{data=dto.LoginResponseData}      "登录成功"
-// @Failure      400      {object}  model.ErrResponse                                      "请求参数错误"
-// @Failure      401      {object}  model.ErrResponse                                      "用户名或密码错误"
-// @Failure      500      {object}  model.ErrResponse                                      "服务器内部错误"
-// @Router       /auth/login [post]
+//	@Summary		用户登录
+//	@Description	用户登录并获取JWT令牌
+//	@Tags			认证
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		dto.UserLoginRequest								true	"登录信息"
+//	@Success		200		{object}	model.SuccessResponse{data=dto.LoginResponseData}	"登录成功"
+//	@Failure		400		{object}	model.ErrResponse									"请求参数错误"
+//	@Failure		401		{object}	model.ErrResponse									"用户名或密码错误"
+//	@Failure		500		{object}	model.ErrResponse									"服务器内部错误"
+//	@Router			/auth/login [post]
 func (c *AuthControllerImpl) Login(ctx *gin.Context) {
 	var req dto.UserLoginRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -122,12 +122,12 @@ func (c *AuthControllerImpl) ResetPassword(ctx *gin.Context) {
 //	@Produce		json
 //	@Param			request	body	dto.UserCreateRequest	true	"用户创建信息"
 //	@Security		BearerAuth
-//	@Success		200	{object}	model.APIResponse	"用户创建成功"
-//	@Failure		400	{object}	model.APIResponse	"请求参数错误"
-//	@Failure		401	{object}	model.APIResponse	"未授权访问"
-//	@Failure		403	{object}	model.APIResponse	"禁止访问"
-//	@Failure		409	{object}	model.APIResponse	"用户名已存在"
-//	@Failure		500	{object}	model.APIResponse	"服务器内部错误"
+//	@Success		200	{object}	dto.ResetPasswordResponseData	"用户创建成功"
+//	@Failure		400	{object}	model.APIResponse				"请求参数错误"
+//	@Failure		401	{object}	model.APIResponse				"未授权访问"
+//	@Failure		403	{object}	model.APIResponse				"禁止访问"
+//	@Failure		409	{object}	model.APIResponse				"用户名已存在"
+//	@Failure		500	{object}	model.APIResponse				"服务器内部错误"
 //	@Router			/users [post]
 func (c *AuthControllerImpl) CreateUser(ctx *gin.Context) {
 	var req dto.UserCreateRequest
